--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ main {
   max-width: 900px;
   margin: 0 auto;
   padding: 1rem;
-  padding-bottom: 6rem;
+  padding-bottom: 1rem;
 }
 
 section {
@@ -45,10 +45,7 @@ ul {
   padding-left: 1.2rem;
 }
 
-.highlight {
-  font-weight: bold;
-  color: #d62728;
-}
+
 
 .venue-short {
   font-weight: bold;
@@ -84,7 +81,7 @@ footer {
 
 a {
   text-decoration: none;
-  color: #1f77b4;
+  color: black;
 }
 
 a:hover {
@@ -96,6 +93,6 @@ a:hover {
   color: #0c0c0c;
 }
 
-.conf-tag {
+.bule-tag {
   color: #1f77b4; /* 浅蓝色，与 matplotlib 默认蓝色一致 */
 }
